2010-12-14  Stuart Cassoff  <stwo@users.sourceforge.net>

	* configure:	Regenerated to use latest TEA tcl.m4.
			Better building on OpenBSD.

2010-12-14  Stuart Cassoff  <stwo@users.sourceforge.net>

	* Makefile.in: 	Make .SUFFIXES work for more (BSD) make programs.

2010-12-14  Stuart Cassoff  <stwo@users.sourceforge.net>

	* Makefile.in:		Catch up somewhat with
	* pkgIndex.tcl.in:	sampleextension HEAD.
	* generic/tclsample.c:
	* win/rules.vc:
	* win/nmakehelp.vc:
	* win/makefile.vc:

2010-08-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in: update TEA 3.9

2010-08-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure: update TEA 3.8
	* Makefile.in (VPATH): add macosx.

2010-08-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in: TEA 3.8 update, just include tcl.m4,
	modify TEA_INIT version and run autoconf 2.59

2008-12-20  Daniel Steffen  <das@users.sourceforge.net>

	* Makefile.in: use INSTALL_LIBRARY instead of INSTALL_PROGRAM to
	install libraries, avoids breakage from tcl's install-strip when
	built as a bundled package.

2008-11-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in: TEA 3.7 update

2007-10-23  Jeff Hobbs  <jeffh@ActiveState.com>

	*** Tagged tea-3-branch to start TEA 4 development on HEAD ***

	* Makefile.in: separate PKG_ENV parts from TCLSH/WISH_ENV parts to
	better allow 8.4 and 8.5 core variant testing.

2007-05-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/nmakehlp.c:  Added support for simple substitution of an 
	* win/makefile.vc: input file. This permits us to make use of
	pkgIndex.tcl.in style files without resorting to use of the tclsh
	we are building against -- when compiling for a foreign target (eg
	AMD64 from a ix86 host) we may not be able to run the
	tclsh. nmakehlp however must always be a native executable.

2007-05-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc: Round of updating to synch up with the Tcl